--- a/rating-challenge/styles.css
+++ b/rating-challenge/styles.css
@@ -8,11 +8,15 @@
     box-sizing: border-box;
     font-family: "Heebo",sans-serif;
 }
-
-
-
+body{
+    background-color: #141519;
+}
+a{
+    text-decoration: none;
+    color: inherit;    
+}
 .container{
-    margin: 40vh auto;
+    margin: 30vh auto;
     padding: 2em;
     width: 500px;
     height: auto;
@@ -25,32 +29,82 @@
 .star{
     margin: 1em 0px;
 }
+.star button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .info{
     padding: 1em  0px;
 }
 .rating{
     display: flex;
     justify-content: space-between;
-
 }
-
 .rating-btn{
     color: #FCFFFF;
     border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 56px;
     height: 56px;
     border-radius: 28px;
     background-color: #262e37;
     font-size: 1em;
 }
+.rating-btn:hover{
+    transition: .4s;
+    background-color: #7C8897;
+}
+.rating-btn:focus{
+    background-color: #FC7613;
+}
 
 
+.rating-submit{
+    margin-top: 1em;
+}
 .submit-btn{
     width:100%;
     height: 56px;
+    color: #FCFFFF;
+    font-size: 1.4em;
+    letter-spacing: 2px;
+    font-weight: 400;
     background-color: #FC7613;
     border-radius: 28px;
 }
+.submit-btn:hover{
+    transition: .4s;
+    color: #FC7613;
+    background-color: #FCFFFF;
+}
+
+/* New Page Stye Codes */
+
+.selected-value{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#FC7613;
+    background-color: #262e37;
+    border-radius: 12px;
+    font-size: 1em;
+    margin: 2em 0px;
+}
+.thanks{
+    margin: 2em 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+.thanks p{
+    margin: 1em;
+}
+
+
 
 h1{
     color:#FCFFFF;
